--- a/main.css
+++ b/main.css
@@ -1,19 +1,9 @@
 body {
     background-color: black;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 h1{
     text-align:center
   }
-
-h2{
-    text-align:left
-  }
-
-h3{
-    text-align:right
-  }
-h4{
-    text-align:justify
-}
