--- a/main.css
+++ b/main.css
@@ -2,8 +2,5 @@ body {
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-  }
-
-h1{
-    text-align: left;
+    text-align: center;
   }
