--- a/main.css
+++ b/main.css
@@ -1,6 +1,14 @@
 body {
-    background-color: black;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-  }
+  background-color: black;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+#NextPageHL {
+  position: absolute;
+  color: white;
+  top: 25%;
+  left: 48%;
+  transform: translate(-25%, -45%);
+}
