--- a/Circle/Circlecss.css
+++ b/Circle/Circlecss.css
@@ -1,4 +1,12 @@
 body {
     background-color: black;
     color: white;
+    height:100%;
+    width:100%;
+    margin:0;
+    padding:0;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
