change circle page link to white

--- a/ShakeButton/style.css
+++ b/ShakeButton/style.css
@@ -25,6 +25,10 @@ body {
     color: white;
 }
 
+#CirclePage {
+    color: white;
+}
+
 @keyframes shake {
     25% {transform: translateX(75%);}
     50% {transform: translateX(-100%);}
